operator/pkg/gateway-api/testdata/gateway/base/gateway-secrets.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: tls-checks-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZFRENDQXZnQ0ZGYTNTN3FWcmRqcmF6TjN4RVl4VHhFcUNyVGhNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1GZ3gKQ3pBSkJnTlZCQVlUQWxWVE1STXdFUVlEVlFRSURBcFRiMjFsTFZOMFlYUmxNUjh3SFFZRFZRUUtEQlpMZFdKbApjbTVsZEdWeklFZGhkR1YzWVhrZ1FWQkpNUk13RVFZRFZRUUREQXBuWVhSbGQyRjVZWEJwTUI0WERUSTJNREV3Ck5qQTJORFl3TlZvWERUTTJNREV3TkRBMk5EWXdOVm93TVRFTE1Ba0dBMVVFQmhNQ1ZWTXhFREFPQmdOVkJBb00KQjBGamJXVWdRMjh4RURBT0JnTlZCQU1NQjJSbFptRjFiSFF3Z2dJaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQwpEd0F3Z2dJS0FvSUNBU [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUpRZ0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQ1N3d2dna29BZ0VBQW9JQ0FRQ25hM04vZzVXOXRMemgKSkdycTQzWXV3a2N2WENtWjA0c3JtL1lIdmo1YnFyakJyVWdyWTJYZXRLckhKb29kdVNPODhDR08zSG1tWlNlQgo3TnRpY2orQXI1MlhiVlpoZmI4WDZoaEdxZUhjeDA2YWNvTVNidzlkUE5CQklzSGh3dHJoZitUajhOUlJtMFp5Cmp3QjB6MUZGQTVkUWRBQWd1VkcyL1lId1c4T1BaVCtSODgreG1xSktDdlY0N2pHSHBydktDcmNVajB5eHpxTmMKbWQwNmRxVkcrNkllOVdnUUNsQ2V0L2liV2FUY2lQMVhGNHFlNGRGZk1wajNJWlhlTHdOV1hieUwrUTdqWXV3aApYNGE1OHhtRi81UjU5Z [...]
---
apiVersion: v1
kind: Secret
metadata:
  name: tls-passthrough-checks-certificate
  namespace: gateway-conformance-app-backend
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZFRENDQXZnQ0ZGYTNTN3FWcmRqcmF6TjN4RVl4VHhFcUNyVGhNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1GZ3gKQ3pBSkJnTlZCQVlUQWxWVE1STXdFUVlEVlFRSURBcFRiMjFsTFZOMFlYUmxNUjh3SFFZRFZRUUtEQlpMZFdKbApjbTVsZEdWeklFZGhkR1YzWVhrZ1FWQkpNUk13RVFZRFZRUUREQXBuWVhSbGQyRjVZWEJwTUI0WERUSTJNREV3Ck5qQTJORFl3TlZvWERUTTJNREV3TkRBMk5EWXdOVm93TVRFTE1Ba0dBMVVFQmhNQ1ZWTXhFREFPQmdOVkJBb00KQjBGamJXVWdRMjh4RURBT0JnTlZCQU1NQjJSbFptRjFiSFF3Z2dJaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQwpEd0F3Z2dJS0FvSUNBU [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUpRZ0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQ1N3d2dna29BZ0VBQW9JQ0FRQ25hM04vZzVXOXRMemgKSkdycTQzWXV3a2N2WENtWjA0c3JtL1lIdmo1YnFyakJyVWdyWTJYZXRLckhKb29kdVNPODhDR08zSG1tWlNlQgo3TnRpY2orQXI1MlhiVlpoZmI4WDZoaEdxZUhjeDA2YWNvTVNidzlkUE5CQklzSGh3dHJoZitUajhOUlJtMFp5Cmp3QjB6MUZGQTVkUWRBQWd1VkcyL1lId1c4T1BaVCtSODgreG1xSktDdlY0N2pHSHBydktDcmNVajB5eHpxTmMKbWQwNmRxVkcrNkllOVdnUUNsQ2V0L2liV2FUY2lQMVhGNHFlNGRGZk1wajNJWlhlTHdOV1hieUwrUTdqWXV3aApYNGE1OHhtRi81UjU5Z [...]
